--- a/markup/500.html
+++ b/markup/500.html
@@ -17,7 +17,7 @@
   <div class="wrapper-color">
     <header class="header header--error">
       <a class="header__logo header__logo--500 logo" href="#">
-        <img src="img/icons/logo.svg" alt="логотип Тайпотеки">
+        <img src="/img/icons/logo.svg" alt="логотип Тайпотеки">
       </a>
       <a class="header__registration" href="#">Регистрация</a>
       <a class="header__enter" href="#">Вход с паролем</a>
@@ -30,13 +30,13 @@
         <h2 class="error__title title title--big">Что-то пошло не так</h2>
         <p class="error__text text text--big">Причин может быть много: сервер не выдержал нагрузку или в коде ошибка.
           Попробуйте повторить попытку позже.</p>
-        <a class="error__link text text--big" href="main.html">Вернуться на главную</a>
+        <a class="error__link text text--big" href="/">Вернуться на главную</a>
       </section>
     </main>
 
     <footer class="footer">
       <a class="footer__copyright" href="#" aria-label="HTMLAcademy">
-        <img src="img/icons/HTMLAcademyLogo.svg" width="112" height="50" alt="HTMLAcademy">
+        <img src="/img/icons/HTMLAcademyLogo.svg" width="112" height="50" alt="HTMLAcademy">
       </a>
       <span class="footer__dot"></span>
       <p class="footer__text">Типотека, 2019</p>
